[018-(0.0.8)]:: Buttons + Icons + Layout Tweaks >> Added the control buttons into the site. Used Font Awesome Free account for access to icons which greatly improve the overall look and feel of the buttons and interface. Will continue tweaking the layout to make sure that the interface is sized properly for desktop and responds correctly upon re-sizing before too much effort is made in styling.

--- a/style.css
+++ b/style.css
@@ -39,6 +39,10 @@ nav{
   letter-spacing: 5px;
   font-size: 22px;
 }
+h1{
+  padding: .2rem;
+  margin: 0;
+}
 /* ========================= */
 
 /* ===== Sidebars & Hamburger ===== */
@@ -166,7 +170,7 @@ nav{
   position: fixed;
   bottom: 0;
   width: 100%;
-  height: 7vh;
+  height: 6vh;
   justify-content: center;
   background: #547e74;
   z-index: 500;
@@ -178,10 +182,19 @@ nav{
   text-transform: uppercase;
   color: #cfdee7;
   background: gray;
+  border-radius: 1rem;
 
   display: grid;
+
   margin-left: 30%;
   margin-right: 30%;
+  margin-top: .5rem;
+  margin-bottom: .5rem;
+
+  padding-left: .5rem;
+  padding-right: .5rem;
+  padding-top: .5rem;
+  padding-bottom: .5rem;
   width: auto;
   height: 25vh;
   grid-gap: .6rem;
@@ -194,43 +207,33 @@ nav{
   ". moveBackward . . item . next";
 }
 .defend{
-  background-color: blue;
   grid-area: defend;
 }
 .moveForward{
-  background-color: green;
   grid-area: moveForward;
 }
 .attack{
-  background-color: red;
   grid-area: attack;
 }
 .moveLeft{
-  background-color: green;
   grid-area: moveLeft;
 }
 .moveRight{
-  background-color: green;
   grid-area: moveRight;
 }
 .moveBackward{
-  background-color: green;
   grid-area:  moveBackward;
 }
 .inspect{
-  background-color: pink;
   grid-area: inspect;
 }
 .help{
-  background-color: darkslateblue;
   grid-area: help;
 }
 .item{
-  background-color: seagreen;
   grid-area: item;
 }
 .next{
-  background-color: purple;
   grid-area: next;
 }
 
@@ -271,7 +274,7 @@ nav{
     grid-template-areas:
     "defend moveForward attack"
     "moveLeft . moveRight"
-    ". moveBackward ."
+    "item moveBackward ."
     "inspect help next";
   }
 }
